Some tidyup of views and a little layout change making it take 80% of page

--- a/app/webroot/css/uninotes.css
+++ b/app/webroot/css/uninotes.css
@@ -51,9 +51,9 @@ root {
 	width: 50%;
 }
 
-#content #home {
+#content #innerContent {
 	margin: 0 auto;
-	width: 60%;
+	width: 80%;
 }
 
 #content #home h1 { 
