--- a/app/webroot/css/uninotes.css
+++ b/app/webroot/css/uninotes.css
@@ -1,18 +1,25 @@
 /* 
-    Document   : uninotes
-    Created on : 01-Feb-2012, 20:16:33
-    Author     : g
-    Description:
-        Purpose of the stylesheet follows.
-*/
-
-/* 
-   TODO customize this sample style
-   Syntax recommendation http://www.w3.org/TR/REC-CSS2/
-*/
+Document   : uninotes
+Created on : 01-Feb-2012, 20:16:33
+Author     : g
+Description:
+Purpose of the stylesheet follows.
+ */
 
 root { 
-    display: block;
+	display: block;
+}	
+
+.link_button {
+	background: -moz-linear-gradient(center top , #F1F1D4, #E6E49F) repeat scroll 0 0 #E6E49F;
+	border: 1px solid #AAAC62;
+	border-radius: 8px 8px 8px 8px;
+	color: #333333;
+	font-weight: normal;
+	min-width: 0;
+	padding: 4px 8px;
+	text-decoration: none;
+	text-shadow: 0 1px 0 #FFFFFF;
 }
 
 #header a {
@@ -69,10 +76,10 @@ root {
 }
 
 ul.inline-headings{
-  display:inline-block;
+	display:inline-block;
 }
 ul.inline-headings li {
-    display: inline-block;
+	display: inline-block;
 }
 
 /*Overide built-in positioning of Actions navbar*/
