Doc list tidyup

--- a/app/webroot/css/uninotes.css
+++ b/app/webroot/css/uninotes.css
@@ -53,10 +53,11 @@ root {
 #content h1 {
 	font-size: large
 }
-
+/*
 #content .related.links, .related.documents {
 	width: 50%;
 }
+*/
 
 #content #breadcrumbs {
 	padding: 1em;
