Added hacky way of previewing google docs

--- a/app/webroot/css/uninotes.css
+++ b/app/webroot/css/uninotes.css
@@ -76,6 +76,11 @@ root {
 	padding-top: 1em;
 }
 
+#content #gdocs_preview {
+	float:right;
+	width: 500px;
+}
+
 ul.inline-headings{
 	display:inline-block;
 }
