--- a/app/webroot/css/uninotes.css
+++ b/app/webroot/css/uninotes.css
@@ -10,7 +10,7 @@ root {
 	display: block;
 }	
 
-.link_button {
+.btn {
 	background: -moz-linear-gradient(center top , #F1F1D4, #E6E49F) repeat scroll 0 0 #E6E49F;
 	border: 1px solid #AAAC62;
 	border-radius: 8px 8px 8px 8px;
@@ -76,7 +76,7 @@ root {
 	width: 500px;
 }
 
-#content .related .link_button {
+#content .related .btn {
 	float: right;
 }
 
