--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -58,3 +58,12 @@ ul.users_list {
 .carousel .item img {
 	width: 100%;
 }
+
+#footer {
+	background-color: #f5f5f5;
+	text-align: center;
+}
+
+.container .credit {
+        margin: 20px 0;
+}
